tests/mypy/mypy_wrap_function_wrapper_t6.out
tests/mypy/mypy_wrap_function_wrapper_t6.py:27: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_wrap_function_wrapper_t6.py:27: error: Argument 3 to "wrap_function_wrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any] | Callable[[Any, Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any] | Callable[[type[Any], Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 2 errors in 1 file (checked 1 source file)
